@@ -36,7 +36,7 @@ namespace librarysim
 
     private void btnCancel_Click(object sender, EventArgs e)
     {
-      Close();
+			this.Close();
     }
   }
 }
